adding screenshots and logger configuration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.datasource.username=root
 spring.datasource.password=woc@mysql
 
 spring.jpa.hibernate.ddl-auto=update
+
+
+
+logging.file=logs/jay-ems.log
+logging.level.com.woc=INFO
+
+
